# slint-git-file-diff

./: Cargo.toml  README.md
.cargo/: config.toml
src/: git_utils.rs  main.rs
ui/: app-window.slint  file_diff_widget.slint  style.slint
