[package]
name = "slint-git-file-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.21.0", features = ["https", "ssh"] }
html-escape = "0.2.13"
slint = { git = "ssh://git@github.com/slint-ui/slint.git" }
syntect = "5.3.0"

[build-dependencies]
slint-build = { git = "ssh://git@github.com/slint-ui/slint.git" }
